--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
 
     <script>
-        var socket = io.connect('https://stock-news-botpython-bot-py.onrender.com', { transports: ["websocket", "polling"] });
+        var socket = io.connect('https://stock-news-bot-u8fx.onrender.com', { transports: ["websocket", "polling"] });
 
         function subscribeStock() {
             let ticker = document.getElementById("ticker").value.toUpperCase();
